CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/sfrosit_t_paymt_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_paymt_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_paymt_hist</externalName>
    <label>Payment History</label>
    <pluralLabel>Payment History</pluralLabel>
</CustomObject>