CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/amt_pmt__c.field-meta.xml
<CustomField>
    <fullName>amt_pmt__c</fullName>
    <description>amt_pmt</description>
    <externalDeveloperName>amt_pmt</externalDeveloperName>
    <label>Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>