CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/amt_pmt_slots_cntrct__c.field-meta.xml
<CustomField>
    <fullName>amt_pmt_slots_cntrct__c</fullName>
    <description>amt_pmt_slots_cntrct</description>
    <externalDeveloperName>amt_pmt_slots_cntrct</externalDeveloperName>
    <label>Payment Amount for slot contract</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>