CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/amt_pmt_sub__c.field-meta.xml
<CustomField>
    <fullName>amt_pmt_sub__c</fullName>
    <description>amt_pmt_sub</description>
    <externalDeveloperName>amt_pmt_sub</externalDeveloperName>
    <label>Sub payment amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>