CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/cde_method_pmt__c.field-meta.xml
<CustomField>
    <fullName>cde_method_pmt__c</fullName>
    <description>cde_method_pmt</description>
    <externalDeveloperName>cde_method_pmt</externalDeveloperName>
    <label>Payment Method Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>