CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/cde_status_pmt__c.field-meta.xml
<CustomField>
    <fullName>cde_status_pmt__c</fullName>
    <description>cde_status_pmt</description>
    <externalDeveloperName>cde_status_pmt</externalDeveloperName>
    <label>Payment Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>