CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/dte_paid_pmt__c.field-meta.xml
<CustomField>
    <fullName>dte_paid_pmt__c</fullName>
    <description>dte_paid_pmt</description>
    <externalDeveloperName>dte_paid_pmt</externalDeveloperName>
    <label>Payment Paid Date</label>
    <type>Date</type>
</CustomField>