CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/idn_period_serv__c.field-meta.xml
<CustomField>
    <fullName>idn_period_serv__c</fullName>
    <description>idn_period_serv</description>
    <externalDeveloperName>idn_period_serv</externalDeveloperName>
    <label>Service Period Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>