CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/idn_pmt__c.field-meta.xml
<CustomField>
    <fullName>idn_pmt__c</fullName>
    <description>idn_pmt</description>
    <externalDeveloperName>idn_pmt</externalDeveloperName>
    <label>Payment Id</label>
    <length>50</length>
    <referenceTargetField>T_PAYMT__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_PAYMT__c</referenceTo>
    <relationshipLabel>Payment Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_paymt_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>