CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/idn_pmt_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_pmt_hist__c</fullName>
    <description>idn_pmt_hist</description>
    <externalDeveloperName>idn_pmt_hist</externalDeveloperName>
    <label>Payment History Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>