CHATS_SIT/force-app/main/default/objects/sfrosit_t_paymt_hist__x/fields/idn_provr__c.field-meta.xml
<CustomField>
    <fullName>idn_provr__c</fullName>
    <description>idn_provr</description>
    <externalDeveloperName>idn_provr</externalDeveloperName>
    <label>Provider ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>